@@ -526,6 +526,186 @@ setver:
 	@echo "Error: 'make setver' no longer exists."
 	@echo "Edit configure.ac to set version number."
 
+# Adjust permissions when installing as `root` into the actual system.
+# We honour DESTDIR anyway, as someone can install into a chroot etc.
+# NOTE: Might be an 'install-data-hook' (for dirs) and/or 'install-exec-hook'
+# (for service restart) but better not force this on everyone?
+# It is also up to the end-user making such an installation to remove (or not)
+# dirs and files made below.
+# To err on the safe side in cross builds, we ignore Windows builds and those
+# not built for the same system as the build host.
+install-data-hook:
+	@case "@target_os@" in *mingw*) exit 0;; esac ; \
+	 if [ x"@host_os@" != x"@build_os@" ]; then exit 0 ; fi ; \
+	 if [ x"@target_os@" != x"@build_os@" ]; then exit 0 ; fi ; \
+	 if (command -v id) && [ x"`id -u`" = x0 ] && [ x"$(DESTDIR)" = x -o x"$(DESTDIR)" = x/ ] ; then \
+		echo "================================================================================" >&2 ; \
+		echo "| NUT data files have been installed into the system, now consider running     |" >&2 ; \
+		echo "| '(sudo) make install-as-root' to apply permissions and service state changes |" >&2 ; \
+		echo "================================================================================" >&2 ; \
+	 fi
+
+if HAVE_SYSTEMD
+HAVE_SYSTEMD = true
+else
+HAVE_SYSTEMD = false
+endif
+
+if WITH_SYSTEMD_TMPFILES
+WITH_SYSTEMD_TMPFILES = true
+else
+WITH_SYSTEMD_TMPFILES = false
+endif
+
+if WITH_SYSTEMD_PRESET
+WITH_SYSTEMD_PRESET = true
+else
+WITH_SYSTEMD_PRESET = false
+endif
+
+if WITH_CGI
+WITH_CGI = true
+else
+WITH_CGI = false
+endif
+
+if WITH_SOLARIS_SMF
+WITH_SOLARIS_SMF = true
+else
+WITH_SOLARIS_SMF = false
+endif
+
+if WITH_SOLARIS_INIT
+WITH_SOLARIS_INIT = true
+else
+WITH_SOLARIS_INIT = false
+endif
+
+# TODO: Actually move this into scripts like Solaris/postinstall
+# using OS-specific `useradd`/`groupadd`, etc.
+install-as-root: install
+	@case "@target_os@" in *mingw*) exit 0;; esac ; \
+	 if [ x"@host_os@" != x"@build_os@" ]; then exit 0 ; fi ; \
+	 if [ x"@target_os@" != x"@build_os@" ]; then exit 0 ; fi ; \
+	 prefix="@prefix@"; \
+	 if (command -v id) && [ x"`id -u`" = x0 ] ; then \
+		if [ x"$(DESTDIR)" = x -o x"$(DESTDIR)" = x/ ] ; then \
+			if $(HAVE_SYSTEMD) ; then \
+				echo "$@: Stop NUT services, if any" >&2 ; \
+				@SYSTEMD_SYSTEMCTL_PROGRAM@ stop nut-monitor.service nut-server.service || true ; \
+				@SYSTEMD_SYSTEMCTL_PROGRAM@ stop nut-driver.service || true ; \
+				@SYSTEMD_SYSTEMCTL_PROGRAM@ stop nut-driver.target || true ; \
+				@SYSTEMD_SYSTEMCTL_PROGRAM@ stop nut.target || true ; \
+			fi ; \
+			if $(WITH_SOLARIS_SMF) || $(WITH_SOLARIS_INIT) ; then \
+				if $(WITH_SOLARIS_SMF) ; then \
+					echo "$@: Stop NUT services, if any" >&2 ; \
+					SMF_ACTIVE="`/usr/bin/svcs -a -Hostate,fmri | grep svc:/system/power/ | grep -v disabled | awk '{print $$2}'`" ; \
+					for S in $$SMF_ACTIVE ; do \
+						/usr/bin/svcadm disable -ts $$S || true ; \
+					done ; \
+				fi ; \
+				$(top_builddir)/scripts/Solaris/preremove && \
+				$(top_builddir)/scripts/Solaris/preinstall && \
+				$(top_builddir)/scripts/Solaris/postinstall ; \
+				exit ; \
+			fi ; \
+		fi ; \
+		echo "  MKDIR   $(DESTDIR)/@STATEPATH@ $(DESTDIR)/@STATEPATH@/upssched" >&2 ; \
+		$(MKDIR_P) "$(DESTDIR)/@STATEPATH@/upssched" && \
+		for D in "@PIDPATH@" "@ALTPIDPATH@" "@ALTSTATEPATH@" "@CONFPATH@" ; do \
+			case x"$$D" in \
+			x|x@*) ;; \
+			*)	echo "  MKDIR   $(DESTDIR)/$$D" >&2 ; \
+				$(MKDIR_P) "$(DESTDIR)/$$D" \
+				|| exit ;; \
+			esac ; \
+		done ; \
+		if (command -v chmod) ; then \
+			echo "  CHMOD(0770)   $(DESTDIR)/@STATEPATH@ $(DESTDIR)/@STATEPATH@/upssched" >&2 ; \
+			chmod 0770 "$(DESTDIR)/@STATEPATH@" "$(DESTDIR)/@STATEPATH@/upssched" \
+			|| exit ; \
+			for D in "@PIDPATH@" "@ALTPIDPATH@" "@ALTSTATEPATH@" ; do \
+				case x"$$D" in \
+				x|x@*) ;; \
+				*)	echo "  CHMOD(0770)   $(DESTDIR)/$$D" >&2 ; \
+					chmod 0770 "$(DESTDIR)/$$D" \
+					|| exit ;; \
+				esac ; \
+			done ; \
+			echo "  CHMOD(0751)   $(DESTDIR)/@CONFPATH@" >&2 ; \
+			chmod 0751 "$(DESTDIR)/@CONFPATH@" \
+			|| exit ; \
+			for F in hosts.conf.sample upsstats-single.html.sample upsstats.html.sample upsset.conf.sample ; do \
+				echo "  CHMOD(0644)   CGI: $(DESTDIR)/@CONFPATH@/$$F" >&2 ; \
+				chmod 0644 "$(DESTDIR)/@CONFPATH@/$$F" \
+				|| { if $(WITH_CGI) ; then exit 1 ; else true ; fi ; } ; \
+			done ; \
+			for F in nut.conf.sample ups.conf.sample upsd.conf.sample upsd.users.sample upsmon.conf.sample upssched.conf.sample ; do \
+				echo "  CHMOD(0640)   $(DESTDIR)/@CONFPATH@/$$F" >&2 ; \
+				chmod 0640 "$(DESTDIR)/@CONFPATH@/$$F" \
+				|| exit ; \
+			done ; \
+		else \
+			echo "$@: WARNING: Can not CHMOD created locations!" >&2 ; \
+		fi ; \
+		if (command -v chown) && test 0 -lt "`id -u '@RUN_AS_USER@'`" \
+		&& ( test 0 -lt "`getent group '@RUN_AS_GROUP@' | awk -F: '{print $$3}'`" || test 0 -lt "`id -g '@RUN_AS_GROUP@'`" ) \
+		; then \
+			echo "  CHOWN(@RUN_AS_USER@:@RUN_AS_GROUP@)   $(DESTDIR)/@STATEPATH@ $(DESTDIR)/@STATEPATH@/upssched" >&2 ; \
+			chown "@RUN_AS_USER@:@RUN_AS_GROUP@" "$(DESTDIR)/@STATEPATH@" "$(DESTDIR)/@STATEPATH@/upssched" \
+			|| exit ; \
+			for D in "@PIDPATH@" "@ALTPIDPATH@" "@ALTSTATEPATH@" ; do \
+				case x"$$D" in \
+				x|x@*) ;; \
+				*)	echo "  CHOWN(@RUN_AS_USER@:@RUN_AS_GROUP@)   $(DESTDIR)/$$D" >&2 ; \
+					chown "@RUN_AS_USER@:@RUN_AS_GROUP@" "$(DESTDIR)/$$D" \
+					|| exit ;; \
+				esac ; \
+			done ; \
+			echo "  CHOWN(root:@RUN_AS_GROUP@)   $(DESTDIR)/@CONFPATH@" >&2 ; \
+			chown "root:@RUN_AS_GROUP@" "$(DESTDIR)/@CONFPATH@" \
+			|| exit ; \
+			for F in hosts.conf.sample upsstats-single.html.sample upsstats.html.sample upsset.conf.sample ; do \
+				echo "  CHOWN(root:@RUN_AS_GROUP@)   CGI: $(DESTDIR)/@CONFPATH@/$$F" >&2 ; \
+				chown "root:@RUN_AS_GROUP@" "$(DESTDIR)/@CONFPATH@/$$F" \
+				|| { if $(WITH_CGI) ; then exit 1 ; else true ; fi ; } ; \
+			done ; \
+			for F in nut.conf.sample ups.conf.sample upsd.conf.sample upsd.users.sample upsmon.conf.sample upssched.conf.sample ; do \
+				echo "  CHOWN(root:@RUN_AS_GROUP@)   $(DESTDIR)/@CONFPATH@/$$F" >&2 ; \
+				chown "root:@RUN_AS_GROUP@" "$(DESTDIR)/@CONFPATH@/$$F" \
+				|| exit ; \
+			done ; \
+		else \
+			echo "$@: WARNING: Can not CHOWN created locations!" >&2 ; \
+		fi ; \
+		if [ x"$(DESTDIR)" = x -o x"$(DESTDIR)" = x/ ] ; then \
+			if $(HAVE_SYSTEMD) ; then \
+				echo "$@: Activate default systemd layout, restart services:" >&2 ; \
+				if $(WITH_SYSTEMD_TMPFILES) ; then \
+					echo "$@: Apply systemd-tmpfiles presets" >&2 ; \
+					@SYSTEMD_TMPFILES_PROGRAM@ --create || exit ; \
+				fi ; \
+				echo "$@: Learn systemd definition changes" >&2 ; \
+				@SYSTEMD_SYSTEMCTL_PROGRAM@ daemon-reload || exit ; \
+				if $(WITH_SYSTEMD_PRESET) ; then \
+					echo "$@: Apply systemd enabled/disabled service presets" >&2 ; \
+					@SYSTEMD_SYSTEMCTL_PROGRAM@ preset-all || exit ; \
+				else \
+					echo "$@: Apply systemd enabled/disabled service defaults" >&2 ; \
+					@SYSTEMD_SYSTEMCTL_PROGRAM@ disable nut.target nut-driver.target nut-monitor nut-server nut-driver-enumerator.path nut-driver-enumerator.service || exit ; \
+					@SYSTEMD_SYSTEMCTL_PROGRAM@ enable  nut.target nut-driver.target nut-monitor nut-server nut-driver-enumerator.path nut-driver-enumerator.service || exit ; \
+				fi ; \
+				echo "$@: Reconfigure nut-driver-enumerator (service instance wrapping)" >&2 ; \
+				@SYSTEMD_SYSTEMCTL_PROGRAM@ restart udev || true ; \
+				$(top_builddir)/scripts/upsdrvsvcctl/nut-driver-enumerator.sh --reconfigure || exit ; \
+				echo "$@: Restart NUT services" >&2 ; \
+				@SYSTEMD_SYSTEMCTL_PROGRAM@ restart nut-driver-enumerator.service nut-monitor.service nut-server.service || exit ; \
+			fi ; \
+		fi ; \
+		echo "$@: finished" >&2 ; \
+	 fi
+
 # Clean the dist tarball and packages
 MAINTAINERCLEANFILES_DISTBALL = nut-*.tar.gz
 # HP-UX:
